--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="${colorPrimary}" />
     <meta name="description" content="${description}" />
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180" />
+    <link rel="icon" href="/public/LOGO.webp" />
+    <link rel="apple-touch-icon" href="/public/LOGO.webp" sizes="180x180" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="stylesheet" href="/styles.css">
-    <title>${title}</title>
+    <title>PARS TRACKER</title>
     <style>
       .loader {
         position: fixed; top: calc(50% - 25px); left: calc(50% - 25px);
